CW#577: Handle non-breaking space